--- a/client/src/app/products/products/products.component.html
+++ b/client/src/app/products/products/products.component.html
@@ -1,1 +1,6 @@
-<p>products works!</p>
+<div *ngFor="let product of (products | async)">
+    <li>{{product.id}}
+        {{product.name}}
+        {{product.price}}
+    </li>
+</div>
